--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="left">
             <h1 style="color: #3f78e0; margin: 0">01933 277 432</h1>
             <p>
-              <a href="info@bksaccountants.com">info@bksaccountants.com</a>
+              <a href="index.html">info@bksaccountants.com</a>
             </p>
           </div>
         </div>
@@ -270,7 +270,7 @@
           <div class="table-1">
             <table border="1" align="center">
               <tr>
-                <th rowspan="12" style="padding: 24px">TCB</th>
+                <th rowspan="12" style="padding: 20px">TCB</th>
               </tr>
               <tr>
                 <th>Order No:</th>
@@ -374,31 +374,43 @@
     <section>
       <div class="footer">
         <div class="cont">
-          <div class="div-1">
-            <h1 style="color: #1f5fd3">BKS</h1>
-          </div>
           <div class="footer-1">
             <div>
-              <br /><br /><br />
-              <h3 style="color: #34526a">
-                31-32 High Street,<br />Wellingborough, NN8 4HL
-              </h3>
+              <br /><br />
+              <img src="Images/Logo 1.png" alt="">
+              <h4 style="color: #34526a">
+                31-32 High Street,<br/><br/>Wellingborough, NN8 4HL
+              </h4>
               <button
                 type="button"
                 onclick="alert('thank you')"
-                style="border: none; background-color: #34526a"
+                style="border: none; color: #34526a"
               >
-                EXPERT ADVICE
-                <img src="Images/Arrow.png" alt="Arrow" />
+                <b>EXPERT ADVICE</b>
+                <img
+                  src="Images/Arrow.png"
+                  style="background-color: #1f5fd3"
+                  alt="Arrow"
+                />
               </button>
-              <h1 style="color: #1f5fd3">01933 277 432</h1>
+              <a
+                href="index.html"
+                style="
+                  display: flex;
+                  color: #1f5fd3;
+                  text-decoration: none;
+                  padding: 18px 0px;
+                  font-size: 25px;
+                "
+                >01933 277 432</a
+              >
               <a href="index.html" style="text-decoration: none; color: #34526a"
                 >info@bksaccountants.com</a
               >
             </div>
 
             <div class="footer-2">
-              <h2 style="color: #1f5fd3">COMPANY</h2>
+              <h3 style="color: #1f5fd3">COMPANY</h3>
               <ul style="list-style: none">
                 <li>Team</li>
                 <br />
@@ -415,7 +427,7 @@
               </ul>
             </div>
             <div class="footer-3">
-              <h2 style="color: #1f5fd3">QUALITY SERVICES</h2>
+              <h3 style="color: #1f5fd3">QUALITY SERVICES</h3>
               <ul style="list-style: none">
                 <li>Accountants</li>
                 <br />
@@ -458,12 +470,12 @@
           </div>
           <div class="footer-p">
             <p style="color: #bec3c8">
-              Berry Kearsley Stockwell, registered as a limited company in
+             <b> Berry Kearsley Stockwell, registered as a limited company in
               England and Wales under company number: 04425676
-            </p>
-            <pre style="color: #bec3c8">
+            </p></b>
+            <b><pre style="color: #bec3c8">
 Legal   Privacy   Accessibility   Sitemap   Help   Glossary</pre
-            >
+            ></b>
           </div>
         </div>
       </div>
