--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width, initial-scale=1.0" />
-    <title>Project-2</title>
+    <title>Berry Kearsley Stockwell</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="Images/Logo 1.png" type="image/x-icon" />
   </head>
-  <link rel="stylesheet" href="style.css" />
   <body>
     <!-- section-1  -->
     <section class="panel-1">
@@ -16,9 +17,7 @@
           </div>
           <div class="left">
             <h1 style="color: #3f78e0; margin: 0">01933 277 432</h1>
-            <p>
-              <a href="index.html">info@bksaccountants.com</a>
-            </p>
+            <a href="index.html">info@bksaccountants.com</a>
           </div>
         </div>
       </div>
@@ -114,7 +113,7 @@
               <h1 style="font-size: 35px; color: #333333">
                 A firm you can rely on
               </h1>
-              <p style="width: 405px">
+              <p style="width: 405px; color: #5f778a">
                 Whatever may be the size of your business, we offer a full range
                 of accounting and bookkeeping services at competitive prices. We
                 are registered auditors and are authorised by the Association of
@@ -320,7 +319,7 @@
                 <td>200.00$</td>
               </tr>
               <tr>
-                <th colspan="3">Total:</th>
+                <th colspan="3" style="text-align: end">Total:</th>
 
                 <td>272.00$</td>
               </tr>
@@ -377,9 +376,9 @@
           <div class="footer-1">
             <div>
               <br /><br />
-              <img src="Images/Logo 1.png" alt="">
+              <img src="Images/Logo 1.png" alt="" />
               <h4 style="color: #34526a">
-                31-32 High Street,<br/><br/>Wellingborough, NN8 4HL
+                31-32 High Street,<br /><br />Wellingborough, NN8 4HL
               </h4>
               <button
                 type="button"
@@ -469,13 +468,18 @@
             /></a>
           </div>
           <div class="footer-p">
-            <p style="color: #bec3c8">
-             <b> Berry Kearsley Stockwell, registered as a limited company in
-              England and Wales under company number: 04425676
-            </p></b>
-            <b><pre style="color: #bec3c8">
+            <b>
+              <p style="color: #bec3c8">
+                Berry Kearsley Stockwell, registered as a limited company in
+                England and Wales under company number: 04425676
+              </p></b
+            >
+
+            <b>
+              <pre style="color: #bec3c8">
 Legal   Privacy   Accessibility   Sitemap   Help   Glossary</pre
-            ></b>
+              >
+            </b>
           </div>
         </div>
       </div>
