--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <img src="Images/Logo.png" />
           </div>
           <div class="left">
-            <h1 style="color: #3f78e0; margin: 0">01933 277 432</h1>
+            <a href="index.html" style="font-size: 23px; color: #3f78e0"
+              >01933 277 432</a
+            ><br />
             <a href="index.html">info@bksaccountants.com</a>
           </div>
         </div>
@@ -26,7 +28,13 @@
       <div class="cont">
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li>
+              <a
+                href="file:///C:/Users/CT_USER/Documents/GitHub/CapsitechP1-V1/index.html#"
+                target="_blank"
+                >Home</a
+              >
+            </li>
             <li><a href="#">Team</a></li>
             <li><a href="#">Accounts</a></li>
             <li><a href="#">Taxation</a></li>
@@ -57,7 +65,12 @@
               At BKS Accountants, we offer a comprehensive range of accounting
               services.
             </p>
-            <img src="Images/Headericon.png" />
+            <a
+              href="https://github.com/Virendrapurohit/CapsitechP2.git"
+              target="_blank"
+            >
+              <img alt="github" src="Images/Headericon.png"
+            /></a>
           </div>
           <div class="header-bottom-right">
             <h2 style="color: #333333">Auditing Consulting</h2>
@@ -65,7 +78,12 @@
               At BKS Accountants, we offer a comprehensive range of accounting
               services.
             </p>
-            <img src="Images/Headericon.png" />
+            <a
+              href="https://github.com/Virendrapurohit/CapsitechP2.git"
+              target="_blank"
+            >
+              <img alt="github" src="Images/Headericon.png"
+            /></a>
           </div>
         </div>
       </div>
@@ -211,7 +229,7 @@
               requirements. Whether you need assistance to register your compsny
               or help with HMRC submission.
             </p>
-            <button type="button" onclick="alert('thank you')">
+            <button type="button" onclick="alert('Thank you')">
               Get in touch with us
             </button>
           </div>
@@ -411,47 +429,47 @@
             <div class="footer-2">
               <h3 style="color: #1f5fd3">COMPANY</h3>
               <ul style="list-style: none">
-                <li>Team</li>
+                <li><a href="index.html">Team</a></li>
                 <br />
-                <li>Accounts</li>
+                <li><a href="index.html">Accounts</a></li>
                 <br />
-                <li>Taxation</li>
+                <li><a href="index.html">Taxation</a></li>
                 <br />
-                <li>Auditing</li>
+                <li><a href="index.html">Auditing</a></li>
                 <br />
-                <li>Bureau Services</li>
+                <li><a href="index.html">Bureau Services</a></li>
                 <br />
-                <li>Consulting</li>
+                <li><a href="index.html">Consulting</a></li>
                 <br />
               </ul>
             </div>
             <div class="footer-3">
               <h3 style="color: #1f5fd3">QUALITY SERVICES</h3>
               <ul style="list-style: none">
-                <li>Accountants</li>
+                <li><a href="index.html">Accountants</a></li>
                 <br />
-                <li>Bookkeeping services</li>
+                <li><a href="index.html">Bookkeeping services</a></li>
                 <br />
-                <li>Company accounts</li>
+                <li><a href="index.html">Company accounts</a></li>
                 <br />
-                <li>Tax planning</li>
+                <li><a href="index.html">Tax planning</a></li>
                 <br />
-                <li>Tax returns</li>
+                <li><a href="index.html">Tax returns</a></li>
                 <br />
               </ul>
             </div>
             <div class="footer-4">
               <br /><br />
               <ul style="list-style: none">
-                <li>Accounts preparation</li>
+                <li><a href="index.html">Accounts preparation</a></li>
                 <br />
-                <li>Auditors</li>
+                <li><a href="index.html">Auditors</a></li>
                 <br />
-                <li>Business advice</li>
+                <li><a href="index.html">Business advice</a></li>
                 <br />
-                <li>Business development</li>
+                <li><a href="index.html">Business development</a></li>
                 <br />
-                <li>Plans</li>
+                <li><a href="index.html">Plans</a></li>
                 <br />
               </ul>
             </div>
