--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Berry Kearsley Stockwell</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link rel="shortcut icon" href="Images/Logo 1.png" type="image/x-icon" />
   </head>
   <body>
@@ -285,7 +286,11 @@
       <div class="sec-2">
         <div class="cont">
           <div class="table-1">
-            <table border="1" align="center">
+            <table
+              border="1"
+              align="center"
+              style="border-collapse: collapse; width: 100%"
+            >
               <tr>
                 <th rowspan="12" style="padding: 20px">TCB</th>
               </tr>
