--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Berry Kearsley Stockwell</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
     <link rel="shortcut icon" href="Images/Logo 1.png" type="image/x-icon" />
   </head>
   <body>
@@ -29,19 +28,29 @@
       <div class="cont">
         <nav>
           <ul>
-            <li>
+            <li style="border-right: 1px solid white">
               <a
                 href="file:///C:/Users/CT_USER/Documents/GitHub/CapsitechP1-V1/index.html#"
                 target="_blank"
                 >Home</a
               >
             </li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Accounts</a></li>
-            <li><a href="#">Taxation</a></li>
-            <li><a href="#">Auditing</a></li>
-            <li><a href="#">Bureau Services</a></li>
-            <li><a href="#">Consulting</a></li>
+            <li style="border-right: 1px solid white; margin: -51px">
+              <a href="#">Team</a>
+            </li>
+            <li style="border-right: 1px solid white; margin: -14px">
+              <a href="#">Accounts</a>
+            </li>
+            <li style="border-right: 1px solid white; margin: -35px">
+              <a href="#">Taxation</a>
+            </li>
+            <li style="border-right: 1px solid white; margin: -14px">
+              <a href="#">Auditing</a>
+            </li>
+            <li style="border-right: 1px solid white; margin: -71px">
+              <a href="#">Bureau Services</a>
+            </li>
+            <li style="margin: -23px"><a href="#">Consulting</a></li>
           </ul>
         </nav>
       </div>
