--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="cont">
             <nav>
               <ul>
-                <li style="border-left: none">
+                <li>
                   <a
                     href="file:///C:/Users/CT_USER/Documents/GitHub/CapsitechP1-V1/index.html#"
                     target="_blank"
@@ -81,7 +81,7 @@
             <div>
               <div class="bottom-right">
                 <h2 style="color: #333333">Accounts</h2>
-                <p style="font-size: 19px">
+                <p style="font-size: 17px">
                   At BKS Accountants, we offer a comprehensive range of
                   accounting services.
                 </p>
@@ -94,7 +94,7 @@
               </div>
               <div class="bottom-left">
                 <h2 style="color: #333333">Auditing Consulting</h2>
-                <p style="font-size: 19px">
+                <p style="font-size: 17px">
                   At BKS Accountants, we offer a comprehensive range of
                   accounting services.
                 </p>
@@ -111,14 +111,14 @@
       </div>
     </section>
 
-    <!-- --------------------------------------------------  paneal-1  ---------------------------------------------------------
+    <!-- --------------------------------------------------  paneal-1 [Accounts] ---------------------------------------------------------
                               --------------------------------------------------------------------->
     <section id="Accounts">
       <div class="cont">
         <div class="panel">
           <div>
             <div class="Tag-left">
-              <h1 style="color: #333333; font-size: 43px">
+              <h1 style="color: #333333; font-size: 42px">
                 Accountancy services tailored to<br />
                 meet your complex needs.
               </h1>
@@ -151,21 +151,19 @@
               ><img src="Images/Arrow.png" alt="Images" />
             </button>
           </div>
-
           <div class="panel-left">
             <img
               src="Images/Afirm.png"
-              style="margin: 50px 0px; height: 228px"
+              style="margin: 50px 8px; height: 226px"
               alt="logo-panel"
             />
             <div style="float: right">
-              <h1 style="color: #333333; font-size: 43px">
+              <h1 style="color: #333333; font-size: 42px">
                 A firm you can rely on
               </h1>
               <p
                 style="
                   width: 462px;
-
                   color: #4d7ea6;
                   line-height: 29px;
                   font-size: 17px;
@@ -191,7 +189,7 @@
         </div>
       </div>
     </section>
-    <!-- ------------------------------------------ panel-2 --------------------------------------------------
+    <!-- ------------------------------------------ panel-2 [Taxation] --------------------------------------------------
                   -------------------------------------------------------------->
     <section class="panel-2" id="Taxation">
       <div class="cont">
@@ -250,7 +248,7 @@
         </div>
       </div>
     </section>
-    <!---------------------------=------------------------------------- panel-3  ----------------------------------------------------
+    <!---------------------------=------------------------------------- panel-3  [business] ----------------------------------------------------
              -------------------------------------------------------------------------------------------------->
 
     <section class="panel-3" id="Team">
@@ -259,12 +257,12 @@
           <div class="right-container">
             <img
               src="Images/Settingup.png"
-              style="margin: 84px 0px"
+              style="margin: 77px 0px"
               alt="Settingup prices"
             />
           </div>
           <div class="left-container">
-            <h1 style="color: #333333; font-size: 40px">
+            <h1 style="color: #333333; font-size: 40px;margin-top: -32px;">
               Setting up a business?
             </h1>
             <p style="line-height: 25px; color: #4d7ea6; font-size: 17px">
@@ -291,7 +289,7 @@
       </div>
     </section>
 
-    <!---------------------------=-------------------------------------panel-4  ----------------------------------------------------
+    <!---------------------------=-------------------------------------panel-4 [Services]  ----------------------------------------------------
              -------------------------------------------------------------------------------------------------->
     <section class="panel-4" id="Bureau Services">
       <div class="cont">
@@ -334,7 +332,7 @@
         </div>
       </div>
     </section>
-    <!-- -----------------------------------------------  panel-5    table ---------------------------------------------------------------
+    <!-- -----------------------------------------------  panel-5 *** [ table ]---------------------------------------------------------------
 -------------------------------------------------------------------------------------------------------------------------->
     <section class="panel-5" id="Consulting">
       <div class="sec-2">
@@ -352,7 +350,6 @@
                 <th>Order No:</th>
                 <td colspan="5">#ABC001</td>
               </tr>
-
               <tr>
                 <th>Order Date:</th>
                 <td colspan="5">23-Mar-2016</td>
@@ -399,7 +396,6 @@
                 <th colspan="3" style="text-align: end; padding: 0px 119px">
                   Total:
                 </th>
-
                 <td>272.00$</td>
               </tr>
             </table>
@@ -407,7 +403,7 @@
         </div>
       </div>
     </section>
-    <!------------------------------------------------------------------- panel-6---------------------------------------------------- --
+    <!------------------------------------------------------------------- panel-6 ( Map )---------------------------------------------------- --
               ------------------------------------------------------------------------------------------------------------------>
     <section class="panel-6">
       <div class="cont">
@@ -417,7 +413,7 @@
               <h1 style="margin: 53px 0px; font-size: 30px">
                 Find out expertise can help you and your company.
               </h1>
-              <h5 style="color: #517898; font-size: 14px">
+              <h5 style="color: #517898; font-size: 14px; margin-top: -17px;">
                 Our accountants serve clients across Wellingborough and
                 Northamptonshire.
               </h5>
@@ -462,8 +458,8 @@
             <div style="padding: 28px 0px">
               <img src="Images/Logo 1.png" alt="logo" />
 
-              <h4 style="color: #34526a; margin: 0px; line-height: 32px">
-                31-32 High Street,<br />Wellingborough,NN84HL
+              <h4 style="color: #34526a; margin: 0px; line-height: 32px;font-weight: bold;">
+                31-32 High Street,<br />Wellingborough , NN84 HL
               </h4>
               <button
                 type="button"
@@ -471,7 +467,7 @@
                 style="border: none; color: #34526a; padding: 0px"
               >
                 <br />
-                <h4 style="margin: 0px; line-height: 30px">
+                <h4 style="margin: 0px;font-weight: 800;">
                   EXPERT ADVICE
                   <img
                     src="Images/Arrow.png"
@@ -487,7 +483,7 @@
                   color: #1f5fd3;
                   text-decoration: none;
                   font-size: 25px;
-                  font-weight: bold;
+                  font-weight: bold;line-height: 22px;margin-top: 15px;
                 "
                 >01933 277 432</a
               >
@@ -499,7 +495,7 @@
             </div>
 
             <div class="footer-2">
-              <h3 style="color: #1f5fd3; text-align: center">COMPANY</h3>
+              <h3 style="color: #1f5fd3; text-align: center; padding-left: 13px;">COMPANY</h3>
               <b
                 ><ul style="list-style: none">
                   <li><a href="index.html">Team</a></li>
@@ -566,13 +562,12 @@
             /></a>
           </div>
           <div class="footer-p">
-            <p style="color: #bec3c8">
+            <p>
               Berry Kearsley Stockwell, registered as a limited company in
               England and Wales under company number: 04425676
             </p>
-
-            <pre style="color: #bec3c8; font-size: 16px">
-Legal   Privacy   Accessibility   Sitemap   Help   Glossary</pre
+            <pre>
+     Legal  Privac  Accessibility  Sitemap  Help  Glossary</pre
             >
           </div>
         </div>
