--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!------------------------------------------------------------- is start -section-1 ---------------------------------------- --
 --------------------------------------------------------------------------------------->
 
-    <section>
+    <section id="info@bksaccountants.com">
       <div class="cont">
         <div class="header-top">
           <div>
@@ -63,7 +63,8 @@
             </nav>
           </div>
         </div>
-
+        <!--------------- Header- Hero section -------------
+        ------------------------------------------>
         <div class="header" id="Reach%20us">
           <div class="cont">
             <div class="Tag">
@@ -262,7 +263,7 @@
             />
           </div>
           <div class="left-container">
-            <h1 style="color: #333333; font-size: 40px;margin-top: -32px;">
+            <h1 style="color: #333333; font-size: 40px; margin-top: -32px">
               Setting up a business?
             </h1>
             <p style="line-height: 25px; color: #4d7ea6; font-size: 17px">
@@ -413,7 +414,7 @@
               <h1 style="margin: 53px 0px; font-size: 30px">
                 Find out expertise can help you and your company.
               </h1>
-              <h5 style="color: #517898; font-size: 14px; margin-top: -17px;">
+              <h5 style="color: #517898; font-size: 14px; margin-top: -17px">
                 Our accountants serve clients across Wellingborough and
                 Northamptonshire.
               </h5>
@@ -458,7 +459,14 @@
             <div style="padding: 28px 0px">
               <img src="Images/Logo 1.png" alt="logo" />
 
-              <h4 style="color: #34526a; margin: 0px; line-height: 32px;font-weight: bold;">
+              <h4
+                style="
+                  color: #34526a;
+                  margin: 0px;
+                  line-height: 32px;
+                  font-weight: bold;
+                "
+              >
                 31-32 High Street,<br />Wellingborough , NN84 HL
               </h4>
               <button
@@ -467,12 +475,12 @@
                 style="border: none; color: #34526a; padding: 0px"
               >
                 <br />
-                <h4 style="margin: 0px;font-weight: 800;">
+                <h4 style="margin: 0px; font-weight: 800">
                   EXPERT ADVICE
                   <img
-                    src="Images/Arrow.png"
+                    src="Images/Arrow 2.jpg"
                     alt="Arrow"
-                    style="background-color: #1f5fd3"
+                    style="margin-bottom: 3px"
                   />
                 </h4>
               </button>
@@ -483,32 +491,38 @@
                   color: #1f5fd3;
                   text-decoration: none;
                   font-size: 25px;
-                  font-weight: bold;line-height: 22px;margin-top: 15px;
+                  font-weight: bold;
+                  line-height: 22px;
+                  margin-top: 15px;
                 "
                 >01933 277 432</a
               >
               <a
-                href="index.html"
+                href="#info@bksaccountants.com"
                 style="text-decoration: none; color: #34526a; font-weight: bold"
                 >info@bksaccountants.com</a
               >
             </div>
 
             <div class="footer-2">
-              <h3 style="color: #1f5fd3; text-align: center; padding-left: 13px;">COMPANY</h3>
+              <h3
+                style="color: #1f5fd3; text-align: center; padding-left: 13px"
+              >
+                COMPANY
+              </h3>
               <b
                 ><ul style="list-style: none">
-                  <li><a href="index.html">Team</a></li>
+                  <li><a href="#Team">Team</a></li>
 
-                  <li><a href="index.html">Accounts</a></li>
+                  <li><a href="#Accounts">Accounts</a></li>
 
-                  <li><a href="index.html">Taxation</a></li>
+                  <li><a href="#Taxation">Taxation</a></li>
 
-                  <li><a href="index.html">Auditing</a></li>
+                  <li><a href="#Auditing">Auditing</a></li>
 
-                  <li><a href="index.html">Bureau Services</a></li>
+                  <li><a href="#Bureau Services">Bureau Services</a></li>
 
-                  <li><a href="index.html">Consulting</a></li>
+                  <li><a href="#Consulting">Consulting</a></li>
                 </ul></b
               >
             </div>
