--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <p
                 style="
                   width: 462px;
-                  color: #4d7ea6;
+                  color:#25465f;
                   line-height: 29px;
                   font-size: 17px;
                 "
@@ -198,7 +198,7 @@
           <div class="grid-item" style="margin-top: 43px">
             <img src="Images/Accounts.png" alt="Accounts file" />
             <h1 style="margin: 0">Accounts</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               Our experienced and knowledgeabl accountants have <br />the
               expertise to find the right solution to <br />
               suit your requirements.
@@ -207,7 +207,7 @@
           <div class="grid-item" style="margin-top: 43px">
             <img src="Images/Taxation.png" alt="Taxation" />
             <h1 style="margin: 0">Taxation</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               When you need a comprehensive taxation service, BKS Accountants,
               Wellingborough, is the name you <br />
               can trust.
@@ -216,7 +216,7 @@
           <div class="grid-item" style="margin-top: 43px">
             <img src="Images/Auditing.png" alt="Auditing File" />
             <h1 style="margin: 0">Auditing</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               At BKS Accountants, all our audits are conducted in accordance
               with current legislation.
             </p>
@@ -225,7 +225,7 @@
           <div class="grid-item">
             <img src="Images/Bureau.png" alt="Bureau file" />
             <h1 style="margin: 0">Bureau Services</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               We have the efficiency and experience to set up a system that
               holds the most updated informa-<br />tion.
             </p>
@@ -233,7 +233,7 @@
           <div class="grid-item">
             <img src="Images/Consulting.png" alt="Consulting" />
             <h1 style="margin: 0">Consulting</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               We strive to make your business the best it can be. Our clients
               benefit from our many years of combined experience.
             </p>
@@ -241,7 +241,7 @@
           <div class="grid-item">
             <img src="Images/Accounts.png" alt="Accounts Information File" />
             <h1 style="margin: 0">Accounts Information</h1>
-            <p style="color: #4d7ea6">
+            <p style="color: #25465f">
               Below is the relevant accountancy information provided by Berry
               Kearsley Stockwell Limited.
             </p>
@@ -266,7 +266,7 @@
             <h1 style="color: #333333; font-size: 40px; margin-top: -32px">
               Setting up a business?
             </h1>
-            <p style="line-height: 25px; color: #4d7ea6; font-size: 17px">
+            <p style="line-height: 25px; color: #25465f; font-size: 17px">
               if you're Northamptonshire and need professionals to main-tain
               your business accounts,you're in the right place.After you contact
               us,we'll spend some time understanding your business and
@@ -283,7 +283,7 @@
           </div>
         </div>
         <div class="line">
-          <h5 style="color: #4e697f; font-weight: revert">
+          <h5 style="color: #25465f; font-weight: revert">
             Related Perspectives
           </h5>
         </div>
@@ -299,7 +299,7 @@
             <div class="grid-item-1">
               <img src="Images/Brexit.jpg" alt="Brexit" />
               <h1>Brexit digital event</h1>
-              <p style="color: #4d7ea6">
+              <p style="color: #25465f">
                 Lorem ipsum typography, layout, and printing in place of English
                 to design elements over content.
               </p>
@@ -308,7 +308,7 @@
             <div class="grid-item-1">
               <img src="Images/Annual1.jpg" alt="annual" />
               <h1>Annual Budget</h1>
-              <p style="color: #4d7ea6">
+              <p style="color: #25465f">
                 Lorem ipsum typography, layout, and printing in place of English
                 to design elements over content.
               </p>
@@ -316,7 +316,7 @@
             <div class="grid-item-1">
               <img src="Images/Annual2.jpg" alt="annual" />
               <h1>Annual Budget</h1>
-              <p style="color: #4d7ea6">
+              <p style="color: #25465f">
                 Lorem ipsum typography, layout, and printing in place of English
                 to design elements over content.
               </p>
@@ -324,7 +324,7 @@
             <div class="grid-item-1">
               <img src="Images/Annual3.jpg" alt="annual" />
               <h1>Annual Budget 2021</h1>
-              <p style="color: #4d7ea6">
+              <p style="color: #25465f">
                 Lorem ipsum typography, layout, and printing in place of English
                 to design elements over content.
               </p>
@@ -394,7 +394,7 @@
                 <td>200.00$</td>
               </tr>
               <tr>
-                <th colspan="3" style="text-align: end; padding: 0px 119px">
+                <th colspan="3" style="text-align: end; padding: 0px 119px;border-left: hidden;">
                   Total:
                 </th>
                 <td>272.00$</td>
@@ -414,7 +414,7 @@
               <h1 style="margin: 53px 0px; font-size: 30px">
                 Find out expertise can help you and your company.
               </h1>
-              <h5 style="color: #517898; font-size: 14px; margin-top: -17px">
+              <h5 style="color: #25465f; font-size: 14px; margin-top: -17px">
                 Our accountants serve clients across Wellingborough and
                 Northamptonshire.
               </h5>
@@ -461,7 +461,7 @@
 
               <h4
                 style="
-                  color: #34526a;
+                  color:#25465f;
                   margin: 0px;
                   line-height: 32px;
                   font-weight: bold;
@@ -472,7 +472,7 @@
               <button
                 type="button"
                 onclick="alert('thank you')"
-                style="border: none; color: #34526a; padding: 0px"
+                style="border: none; color: #25465f; padding: 0px"
               >
                 <br />
                 <h4 style="margin: 0px; font-weight: 800">
@@ -499,14 +499,14 @@
               >
               <a
                 href="#info@bksaccountants.com"
-                style="text-decoration: none; color: #34526a; font-weight: bold"
+                style="text-decoration: none; color: #25465f; font-weight: bold"
                 >info@bksaccountants.com</a
               >
             </div>
 
             <div class="footer-2">
               <h3
-                style="color: #1f5fd3; text-align: center; padding-left: 13px"
+                style="color: #4a7ddb; text-align: center; padding-left: 13px"
               >
                 COMPANY
               </h3>
@@ -527,7 +527,7 @@
               >
             </div>
             <div class="footer-3">
-              <h3 style="color: #1f5fd3; text-align: center">
+              <h3 style="color: #4a7ddb; text-align: center">
                 QUALITYSERVICES
               </h3>
               <b
