--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <p
                 style="
                   width: 462px;
-                  color:#25465f;
+                  color: #25465f;
                   line-height: 29px;
                   font-size: 17px;
                 "
@@ -394,7 +394,14 @@
                 <td>200.00$</td>
               </tr>
               <tr>
-                <th colspan="3" style="text-align: end; padding: 0px 119px;border-left: hidden;">
+                <th
+                  colspan="3"
+                  style="
+                    text-align: end;
+                    padding: 0px 119px;
+                    border-left: hidden;
+                  "
+                >
                   Total:
                 </th>
                 <td>272.00$</td>
@@ -461,7 +468,7 @@
 
               <h4
                 style="
-                  color:#25465f;
+                  color: #25465f;
                   margin: 0px;
                   line-height: 32px;
                   font-weight: bold;
