commit button class

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div>
               <div class="bottom-right">
                 <h2 style="color: #333333">Accounts</h2>
-                <p style="font-size: 17px">
+                <p>
                   At BKS Accountants, we offer a comprehensive range of
                   accounting services.
                 </p>
@@ -95,7 +95,7 @@
               </div>
               <div class="bottom-left">
                 <h2 style="color: #333333">Auditing Consulting</h2>
-                <p style="font-size: 17px">
+                <p>
                   At BKS Accountants, we offer a comprehensive range of
                   accounting services.
                 </p>
@@ -113,7 +113,7 @@
     </section>
 
     <!-- --------------------------------------------------  paneal-1 [Accounts] ---------------------------------------------------------
-                              --------------------------------------------------------------------->
+     ----------------------------------------------------------------------------------------------------------------------->
     <section id="Accounts">
       <div class="cont">
         <div class="panel">
@@ -135,7 +135,7 @@
             </div>
             <div class="box-div">
               <div class="Tag-right">
-                <h1 style="margin: 0px; font-size: 30px">
+                <h1 style="margin: 1px; font-size: 31px">
                   Personalised <br />
                   tax advice
                 </h1>
@@ -158,7 +158,7 @@
               style="margin: 50px 8px; height: 226px"
               alt="logo-panel"
             />
-            <div style="float: right">
+            <div style="float: right; margin-top: 4px">
               <h1 style="color: #333333; font-size: 42px">
                 A firm you can rely on
               </h1>
@@ -274,6 +274,7 @@
               or help with HMRC submission.
             </p>
             <button
+              class="get-btn"
               type="button"
               onclick="alert('Thank you')"
               style="border: none"
@@ -427,28 +428,13 @@
               </h5>
             </div>
             <div class="Map-btn">
-              <button
-                type="button"
-                onclick="alert('Sorry')"
-                style="
-                  padding: 16px 31px;
-                  margin: 26px 21px;
-                  color: white;
-                  background-color: #1f5fd3;
-                  border: none;
-                "
-              >
+              <button class="btn-1" type="button" onclick="alert('Sorry')">
                 CAREERS
               </button>
               <button
+                class="btn-2"
                 type="button"
                 onclick="alert('OK ready for sarvices')"
-                style="
-                  padding: 16px 20px;
-                  color: white;
-                  background-color: #1f5fd3;
-                  border: none;
-                "
               >
                 INDUSTRIES SERVICES
               </button>
