commit-text table

--- a/index.html
+++ b/index.html
@@ -366,8 +366,9 @@
             <tr>
               <th colspan="3" style="
                     text-align: end;
-                    padding: 0px 119px;
+                    padding: 0px 156px;
                     border-left: hidden;
+                    font-weight: bold;
                   ">
                 Total:
               </th>
